--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     color: red;
     text-align: center;
     font-size: 20px;
-    margin: 0px;
+    border: 5px solid white;
 }
 
 .card-img-top {
@@ -47,6 +47,7 @@
     left: 40%;
     background-color: white;
     width: 250px;
+    height: 90px;
     border: 5px solid black;
 }
 
