--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,28 +17,29 @@
 
 .card-img-top-blue {
     height: 200px;
-    width: 250px;
+    width: 200px;
 }
 
 .card-img-top-purple {
     height: 200px;
-    width: 450px;
+    width: 200px;
 }
 
 .card-img-top-green {
     height: 200px;
-    width: 250px;
+    width: 200px;
 }
 
 .card-img-top-white {
     height: 200px;
-    width: 250px;
+    width: 200px;
 }
 
 .card-body {
     position: relative;
-    background-color: white;
-    width: 250px;
+    background-color: black;
+    color: red;
+    width: 200px;
     border: 5px solid black;
 
 }
@@ -46,10 +47,12 @@
     position: relative;
     left: 30%;
     background-color: white;
-    width: 250px;
+    width: 200px;
     height: 90px;
     border: 5px solid black;
 }
+
+
 
 
 
