--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,15 @@
     font-size: 20px;
 }
 
+@media screen and  (max-width: 360px) {
+    body {
+    width: 1%;
+    
+    }
+    card-image-top-blue {
+         Width : 10%;}
+}
+
 
 
 
